fix(ui): Dropdown - prevent label wrapping

--- a/packages/ui/src/ui/dropdown/dropdown.module.css
+++ b/packages/ui/src/ui/dropdown/dropdown.module.css
@@ -15,6 +15,7 @@
   line-height: 1.1;
   font-weight: bold;
   text-transform: uppercase;
+  white-space: nowrap;
   appearance: none;
   cursor: pointer;
 }
